// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BasePicker renders correctly 1`] = `
<div
  className="ms-BasePicker"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-live="assertive"
    id="selected-suggestion-alert-id__0"
  >
    
  </div>
  <span
    hidden={true}
    id="selected-items-id__0-label"
  />
  <div
    className="ms-SelectionZone"
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onKeyDownCapture={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className="ms-BasePicker-text"
    >
      <input
        aria-autocomplete="both"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoCapitalize="off"
        autoComplete="off"
        className="ms-BasePicker-input"
        data-lpignore={true}
        id="combobox-id__0"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        role="combobox"
        spellCheck={false}
        style={
          Object {
            "fontFamily": "inherit",
          }
        }
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`BasePicker renders with inputProps supply classnames correctly 1`] = `
<div
  className="ms-BasePicker"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
>
  <div
    aria-live="assertive"
    id="selected-suggestion-alert-id__0"
  >
    
  </div>
  <span
    hidden={true}
    id="selected-items-id__0-label"
  />
  <div
    className="ms-SelectionZone"
    onClick={[Function]}
    onContextMenu={[Function]}
    onDoubleClick={[Function]}
    onFocusCapture={[Function]}
    onKeyDown={[Function]}
    onKeyDownCapture={[Function]}
    onMouseDown={[Function]}
    onMouseDownCapture={[Function]}
    role="presentation"
  >
    <div
      className="ms-BasePicker-text"
    >
      <input
        aria-autocomplete="both"
        aria-expanded={false}
        aria-haspopup="listbox"
        autoCapitalize="off"
        autoComplete="off"
        className="ms-BasePicker-input testclass "
        data-lpignore={true}
        id="pckSelectedUser"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onCompositionEnd={[Function]}
        onCompositionStart={[Function]}
        onCompositionUpdate={[Function]}
        onFocus={[Function]}
        onInput={[Function]}
        onKeyDown={[Function]}
        placeholder="Bitte einen Benutzer angeben..."
        role="combobox"
        spellCheck={false}
        style={
          Object {
            "fontFamily": "inherit",
          }
        }
        value=""
      />
    </div>
  </div>
</div>
`;
